grammar.js
    sourceFile: $ => choice(
      seq(
        'package', $.packageIde, ';', 
          repeat($.exportDecl),
          repeat($.importDecl),
          repeat($.packageStmt),
        'endpackage', optseq(':', $.packageIde)
      ),
      // NOTE: Contrary to spec, the actual bsc implementation allows files 
      //       without a package declaration.
      seq(
        repeat($.exportDecl),
        repeat($.importDecl),
        repeat($.packageStmt),
      ),
    ),

    // NOTE: Ignore compiler directives for now. Assume pre-processed source.
    //       The directives use C syntax, so any C pre-processor works on these.
    //       Alternatively, we could use preprocessor rules from tree-sitter-c
    // compilerDirective: $ => choice(
    //   seq("'include", '"', $.filename, '"'),
    //   seq("'include", '<', $.filename, '>'),
    //   seq("'include", $.macroInvocation),
    //   seq("'line", $.decDigits, '"', $.filename, '"', $.level),
    //   seq("'define", $.macroName, optseq('(', $.macroFormals, ')'), $.macroText),
    // ),
    // level: $ => choice('0', '1', '2'),

    importDecl: $ => seq('import', $.importItem, repeatseq(',', $.importItem), ';'),
    importItem: $ => seq($.packageIde, '::', '*'),

    packageStmt: $ => choice(
      $.moduleDef,
      $.interfaceDecl, 
      $.typeDef, 
      $.varDecl, 
      // NOTE: Only the below "varAssign" rule choice is valid at packageStmt scope,
      //       contrary to the spec.
      prec.left(seq($.lValue, '=', $.expression, ';')),
      $.functionDef,
      $.typeclassDef,
      $.typeclassInstanceDef,
      // TODO: Add externModuleImport, sec. 15 from BSV lang ref
      // $.externModuleImport, 
      // NOTE: missing in the spec:
      $.externCImport, 
    ),

    //  NOTE: BSV lang ref guide requires upper case; 
    //  the actual bsc implementation does not care...
    packageIde: $ => $.identifier, 

    // ================================================================
    // sec 4 Types

    type: $ => choice(
      $.typePrimary, 
      prec.left(seq(
        $.typePrimary, '(', $.type, repeatseq(',', $.type), ')'
      ))
    ),

    typePrimary: $ => choice(
      seq($.typeIde, optseq('#', '(', $.type, repeatseq(',', $.type), ')')),
      $.typeNat,
      seq('bit', '[', $.typeNat, ':', $.typeNat, ']')
    ),

    // NOTE: To quote from BSV reference manual: Data types in BSV are case 
    // sensitive. The first character of a type is almost always uppercase, the
    // only exceptions being the types int and bit for compatibility with Verilog.
    typeIde: $ => $.identifier,
    typeNat: $ => $.decDigits,

    // ================================================================
    // sec 5.2 Interface declaration

    interfaceDecl: $ => seq(
      optional($.attributeInstance), 
      'interface', $.typeDefType, ';', 
        repeat($.interfaceMemberDecl),
      'endinterface', optseq(':', $.typeIde)
    ),

    typeDefType: $ => seq(
      $.typeIde, optional($.typeFormals)
    ),
    interfaceMemberDecl: $ => choice($.methodProto, $.subinterfaceDecl),

    methodProto: $ => seq(
      optional($.attributeInstances), 
      'method', $.type, $.identifier, optseq('(', optional($.methodProtoFormals), ')'), ';'
    ),

    methodProtoFormals: $ => seq(
      $.methodProtoFormal, repeatseq(',', $.methodProtoFormal)
    ),
    // NOTE: A function can be a method parameter.
    methodProtoFormal: $ => choice(
      seq(optional($.attributeInstances), $.type, $.identifier),
      $.functionProto
    ),

    // NOTE: Spec seems to be missing "identifier".
    moduleDef: $ => seq(
      optional($.attributeInstances), 
      $.moduleProto,
        repeat($.moduleStmt), 
      'endmodule', optseq(':', $.identifier)
    ),

    moduleProto: $ => seq(
      'module', optseq('[', $.type, ']'), $.identifier,
      optional($.moduleFormalParams), '(', optional($.moduleFormalArgs), ')',
      optional($.provisos), ';'
    ),
    moduleFormalArgs: $ => choice(
      seq(optional($.attributeInstances), $.type),
      seq(optional($.attributeInstances), $.type, $.identifier,
          repeatseq(',', optional($.attributeInstances), $.type, $.identifier))
    ),

    moduleStmt: $ => choice(
      $.moduleInst,
      $.methodDef,
      $.subinterfaceDef,
      $.rule, 
      $.varDo,
      $.varDeclDo,
      // NOTE: The spec {module, function, action, actionValue, etc}Stmt rules 
      //       are missing semicolons in some places.
      prec.left(seq($.functionCall, ';')),
      $.systemTaskStmt,
      prec.left(seq('(', $.expression, ')', ';')),
      $.returnStmt,
      $.varDecl,
      $.varAssign,
      $.functionDef,
      $.moduleDef,
      ctxtBeginEndStmt($, $.moduleStmt),
      ctxtIf($, $.moduleStmt),
      ctxtCase($, $.moduleStmt),
      ctxtFor($, $.moduleStmt),
      ctxtWhile($, $.moduleStmt),
    ),


    // ============================================================
    // sec 5.4 Module and interface instantiation

    // sec 5.4.1 Short form instantiation
    moduleInst: $ => prec.left(seq(
      optional($.attributeInstances),
      // NOTE: Contrary to spec, we make the type optional, since
      //       we could be assigning to an already declared Vector for example.
      //       We also do s/identifier/lValue to allow asigning to array indexes,
      //       or to allow things like concurrent registers.
      optional($.type), $.lValue, '<-', $.moduleApp, ';'
    )),
    moduleApp: $ => prec.left(seq(
      // NOTE: Parens are optional in the bsc implementation.
      $.identifier, optseq('(', 
        optseq($.moduleActualParamArg, repeatseq(',', $.moduleActualParamArg)),
      ')')
    )),
    moduleActualParamArg: $ => choice(
      $.expression,
      seq('clocked_by', $.expression),
      seq('reset_by', $.expression)
    ),

    // sec 5.4.2 Long form instantiation (depractaed)
    methodDef: $ => choice(
      seq(
        'method', optional($.type), $.identifier,
          optseq('(', optional($.methodFormals), ')'),
          optional($.implicitCond), ';', 
            $.functionBody,
        'endmethod', optseq(':', $.identifier)
      ),
      // Short form (sec 5.5.3)
      seq(
        'method', optional($.type), $.identifier, 
        optseq('(', optional($.methodFormals), ')'),
        optional($.implicitCond), '=', $.expression, ';'
      ),
      // Action method (sec. 5.5.1)
      seq(
        'method', 'Action', $.identifier,
          optseq('(', optional($.methodFormals), ')'),
          optional($.implicitCond), ';', 
            repeat($.actionStmt),
        'endmethod', optseq(':', $.identifier),
      ),
      // ActionValue method (sec. 5.5.1)
      seq(
        'method', 'ActionValue', $.typeFormals, $.identifier,
          optseq('(', optional($.methodFormals), ')'),
          optional($.implicitCond), ';', 
            repeat($.actionValueStmt),
        'endmethod', optseq(':', $.identifier),
      ),
    ),

    methodFormals: $ => seq($.methodFormal, repeatseq(',', $.methodFormal)),
    methodFormal: $ => seq(optional($.type), $.identifier),
    implicitCond: $ => prec.right(seq('if', '(', $.condPredicate, ')')),
    
    // 5.5.2 Definition of subinterfaces
    rule: $ => prec.left(seq(
      optional($.attributeInstances), 
      'rule', $.identifier, optional($.ruleCond), ';', 
        repeat($.actionStmt), // rule body
      'endrule', optional(seq(':', $.identifier))
    )),
    ruleCond: $ => prec.left(seq('(', $.condPredicate, ')')),
    condPredicate: $ => prec.left(seq(
      $.exprOrCondPattern, repeatseq('&&&', $.exprOrCondPattern)
    )),
    exprOrCondPattern: $ => choice(
      $.expression,
      prec.left(seq($.expression, 'matches', $.pattern)),
      // NOTE: Contrary to spec, a pattern and an expression can be in parens.
      prec.left(seq($.expression, 'matches', '(', $.pattern, ')')),
      prec.left(seq('(', $.expression, ')')),
    ),

    // ================================================================
    // Typedefs

    typeDef: $ => choice(
      $.typedefSynonym, 
      $.typedefEnum, 
      $.typedefStruct,
      $.typedefTaggedUnion
    ),

    typedefSynonym: $ => prec.left(seq(
      'typedef', $.type, $.typeDefType, ';'
    )),

    typedefEnum: $ => seq(
      'typedef', 'enum', '{', $.typedefEnumElements, '}', $.Identifier, 
        optional($.derives), ';'
    ),
    typedefEnumElements: $ => seq(
      $.typedefEnumElement, repeatseq(',', $.typedefEnumElement)
    ),
    typedefEnumElement: $ => choice(
      prec.left(seq($.Identifier, optseq('=', $.intLiteral))),
      prec.left(seq($.Identifier, '[', $.intLiteral, ']',
                  optseq('=', $.intLiteral))),
      prec.left(seq($.Identifier, '[', $.intLiteral, ':', $.intLiteral, ']',
                  optseq('=', $.intLiteral)))
    ),

    // sec 7.3 Structs and tagged unions
    typedefTaggedUnion: $ => prec.left(seq(
      'typedef', 'union', 'tagged', '{',
        repeat($.unionMember), 
      '}', $.typeDefType, optional($.derives), ';'
    )),
    structMember: $ => choice(
      prec.left(seq($.type, $.identifier, ';')),
      prec.left(seq($.subUnion, $.identifier, ';'))
    ),
    unionMember: $ => choice(
      prec.left(seq($.type, $.Identifier, ';')),
      prec.left(seq($.subStruct, $.Identifier, ';')),
      prec.left(seq($.subUnion, $.Identifier, ';')),
      prec.left(seq('void', $.Identifier, ';'))
    ),
    subStruct: $ => prec.left(seq(
      'struct', '{', 
        repeat($.structMember), 
      '}'
    )),
    typeclassIde: $ => $.Identifier,
    derives: $ => prec.left(seq(
      'deriving', '(', $.typeclassIde, repeat(seq(',', $.typeclassIde)), ')'
    )),

    // ================================================================
    // sec 9 Variable declarations and statements

    varDecl: $ => choice(
      prec.left(seq($.type, $.varInit, repeatseq(',', $.varInit), ';')),
      prec.left(seq('let', $.identifier, '=', $.expression, ';')),
      // NOTE: The spec is missing the below rule to allow declarations like:
      //       Reg#(Maybe#(t)) data();
      prec.left(seq($.type, $.identifier, 
        '(', 
          optseq($.expression, repeatseq(',', $.expression)),
        ')', ';')
      ),
    ),

    varInit: $ => prec.left(seq(
      $.identifier, optional($.arrayDims), optseq('=', $.expression)
    )),
    varAssign: $ => choice(
      prec.left(seq($.lValue, '=', $.expression, ';')),
      // if expression is the value returned by an actionvalue method:
      prec.left(seq('let', $.identifier, '<-', $.expression, ';')),
      // sec 11.4 pattern matching
      prec.left(seq('match', $.pattern, '=', $.expression, ';'))
    ),
    lValue: $ => choice(
      $.identifier, 
      prec.right(seq($.lValue, '.', $.identifier)),
      prec.right(seq($.lValue, '[', $.expression, ']')),
      prec.right(seq($.lValue, '[', $.expression, ':', $.expression, ']'))
    ),
    varDeclDo: $ => prec.left(seq($.type, $.identifier, '<-', $.expression, ';')),
    regWrite: $ => choice(
      // NOTE: Spec is missing semicolon. regWrite could be without one, 
      //       relying on super rules to add one, but this is not the approach
      //       taken with other rules in the spec, e.g., varDo.
      prec.left(seq($.lValue, '<=', $.expression, ';')),
      prec.left(seq('(', $.expression, ')', '<=', $.expression, ';')),
      prec.left(seq($.lValue, $.arrayIndexes, '<=', $.expression, ';')),
      prec.left(seq($.lValue, '[', $.expression, ':', $.expression, ']', '<=', $.expression, ';')),
      prec.left(seq($.lValue, '.', $.identifier, '<=', $.expression, ';')),
    ),
    functionDef: $ => prec.left(seq(
      optional($.attributeInstances), 
      // NOTE: We removed the semicolon from the functionProto rule
      //       to allow functionProtos to appear in method/function arguments.
      $.functionProto, ';',
        $.functionBody, 
      'endfunction', optseq(':', $.identifier)
    )),

    // NOTE: Contrary to the spec, our rule does not have a semicolon, requiring
    //       any super rules to handle them. This is to enable function prototypes
    //       to appear in function/method arguments.
    //       Also, we have optional parens, contrary to spec?
    functionProto: $ => prec.left(seq(
      'function', $.type, $.identifier,
          optseq('(', optional($.functionFormals), ')'), 
          optional($.provisos), optional($.expression)
    )),
    functionFormals: $ => prec.left(seq(
      $.functionFormal, repeatseq(',', $.functionFormal)
    )),
    functionFormal: $ => choice(
      // NOTE: A function can take another function as parameter.
      prec.left(seq($.type, $.identifier)),
      $.functionProto
    ),

    functionBody: $ => choice(
      $.actionBlock,
      $.actionValueBlock,
      // NOTE: Spec allows repeat0, but there is no way to have an empty body?
      repeat1($.functionBodyStmt),
    ),
    functionBodyStmt: $ => choice(
      $.returnStmt, 
      $.varDecl, 
      $.varAssign, 
      $.functionDef,
      $.moduleDef, 
      ctxtBeginEndStmt($, $.functionBodyStmt),
      ctxtIf($, $.functionBodyStmt),
      ctxtCase($, $.functionBodyStmt),
      ctxtFor($, $.functionBodyStmt),
      ctxtWhile($, $.functionBodyStmt),
    ),
    returnStmt: $ => seq('return', $.expression, ';'),


    // ================================================================
    // sec 10 Expressions

    expression: $ => choice(
      $.condExpr, 
      $.operatorExpr, 
      $.exprPrimary
    ),

    operatorExpr: $ => choice(
      prec.right(seq($.unop, $.expression)),
      prec.left(seq($.expression, $.binop, $.expression))
    ),

    // The following operators are in order of decreasing precedence
    unop: $ => token(choice(
      prec(90, '+'),
      prec(90, '-'),
      prec(90, '!'),
      prec(90, '~'),
      prec(89, '&'),
      prec(88, '~&'),
      prec(87, '|'),
      prec(86, '~|'),
      prec(85, '^'),
      prec(84, '^~'),
      prec(84, '~^'),
    )),
    binop: $ => token(choice(
      // NOTE: The spec is missing the power binop.
      prec(83, '**'),
      prec(82, '*'),
      prec(82, '/'),
      prec(82, '%'),
      prec(81, '+'),
      prec(81, '-'),
      prec(80, '<<'),
      prec(80, '>>'),
      prec(79, '<='),
      prec(79, '>='),
      prec(79, '<'),
      prec(79, '>'),
      prec(78, '=='),
      prec(78, '!='),
      prec(77, '&'),
      prec(76, '^'),
      prec(75, '^~'),
      prec(75, '~^'),
      prec(74, '|'),
      prec(73, '&&'),
      prec(72, '||'),
    )),

    exprPrimary: $ => choice(
      $.identifier,
      $.intLiteral,
      $.realLiteral,
      $.stringLiteral,
      $.systemFunctionCall,
      field('dont_care', '?'),
      prec.left(seq('(', $.expression, ')')),
      seq('valueOf', '(', $.type, ')'),
      seq('valueof', '(', $.type, ')'),
      $.bitConcat,
      $.bitSelect,
      $.beginEndExpr,
      $.actionBlock,
      $.actionValueBlock,
      $.functionCall,
      $.methodCall,
      $.typeAssertion,
      $.structExpr,
      prec.left(seq($.exprPrimary, '.', $.identifier)),
      $.taggedUnionExpr,
      $.interfaceExpr,
      $.rulesExpr,
      $.seqFsmStmt,
      $.parFsmStmt,
    ),

    actionStmt: $ => choice(
      $.regWrite,
      $.varDo,
      $.varDeclDo,
      prec.left(seq($.functionCall, ';')),
      prec.left(seq($.methodCall, ';')),
      $.systemTaskStmt,
      prec.left(seq('(', $.expression, ')', ';')),
      $.actionBlock,
      $.varDecl,
      $.varAssign,
      $.functionDef,
      $.methodDef,
      // NOTE: The bsc implementation provides a "noAction" statement. 
      field('noAction', 'noAction'),
      ctxtBeginEndStmt($, $.actionStmt),
      ctxtIf($, $.actionStmt),
      ctxtCase($, $.actionStmt),
      ctxtFor($, $.actionStmt),
      ctxtWhile($, $.actionStmt),
    ),

    memberBind: $ => prec.left(seq($.identifier, ':', $.expression)),

    decNum: $ => seq($.decDigits, optional($.decDigitsUnderscore)),
